crates/java/tests/snapshots/baseline_diff__baseline_annotation_removed_breaking.snap
---
source: crates/java/tests/baseline_diff.rs
expression: "diff(&surface(vec![old_cls]), &surface(vec![new_cls]),)"
---
[]
