crates/java/tests/snapshots/baseline_diff__baseline_class_added.snap
---
source: crates/java/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: UserService
  qualified_name: com.example.UserService
  kind: Class
  change_type: "Added(Symbol { kind: Class })"
  is_breaking: false
  description: "Exported class `UserService` was added"
  before: ~
  after: "class: UserService"
  has_migration_target: false
