crates/java/tests/snapshots/baseline_diff__baseline_class_became_final.snap
---
source: crates/java/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: Base
  qualified_name: com.example.Base
  kind: Class
  change_type: "Added(Modifier { modifier: \"readonly\" })"
  is_breaking: true
  description: "`Base` was made readonly"
  before: mutable
  after: readonly
  has_migration_target: false
