crates/java/tests/snapshots/baseline_diff__baseline_method_parameter_added.snap
---
source: crates/java/tests/baseline_diff.rs
expression: "diff(&surface(vec![old_cls]), &surface(vec![new_cls]),)"
---
- symbol: process
  qualified_name: com.example.Service.process
  kind: Method
  change_type: "Added(Parameter { name: \"options\" })"
  is_breaking: true
  description: "Required parameter `options` was added to `process`"
  before: ~
  after: "options: Map<String, Object>"
  has_migration_target: false
